src/snapshots/kk__tests__compiler__typecheck__array_homogeneity_1.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let x = [1, null]

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/array_homogeneity_1.kk:1:13
  │
1 │ let x = [1, null]
  │             ^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - number      | + null      |
    +---------------+-------------+
